--- a/package.json
+++ b/package.json
@@ -12,3 +12,13 @@
    "postcss-cssnext": "project",
    "tachyons": "project"
   }
+},
+ "dependencies": {},
+ "description": "Theme Ananke",
+ "devDependencies": {
+  "auto-changelog": "^1.16.1",
+  "cssnano": "^3.10.0",
+  "postcss-cli": "^7.1.0",
+  "postcss-cssnext": "^2.10.0",
+  "tachyons": "^4.9.1"
+ },
