--- a/package.json
+++ b/package.json
@@ -22,3 +22,21 @@
   "postcss-cssnext": "^2.10.0",
   "tachyons": "^4.9.1"
  },
+"homepage": "https://github.com/theNewDynamic/gohugo-theme-ananke#readme",
+ "keywords": [
+  "hugo",
+  "gohugo"
+ ],
+ "license": "MIT",
+ "main": "index.js",
+ "name": "gohugo-theme-ananke",
+ "repository": {
+  "type": "git",
+  "url": "git+https://github.com/theNewDynamic/gohugo-theme-ananke.git"
+ },
+ "scripts": {
+  "version": "auto-changelog -p --template keepachangelog --commit-limit 0 \u0026\u0026 git add CHANGELOG.md",
+  "deploy": " cd exampleSite; hugo;"
+ },
+ "version": "2.7.0"
+}
